# allreduce

./: CMakeLists.txt
cmake/: MSCCLPP.cmake  TRTLLM.cmake
include/: cuda_allreduce.h  cuda_ipc_memory.h  mscclpp_allreduce.h
src/: cuda_allreduce.cpp  cuda_fp8.cpp  cuda_ipc_memory.cpp  mscclpp_allreduce.cu
tests/: Makefile  benchmark_cuda_allreduce.cpp  benchmark_mscclpp_allreduce.cpp  test_cuda_allreduce.cpp  test_fp8.cu  test_mscclpp.cpp  test_mscclpp_allreduce.cpp  test_nccl_allgather_mpi.cu  test_nccl_allreduce_mpi.cu
trt-llm-allreduce/: CMakeLists.txt  test_allreduce.cu  test_custom_allreduce.cu  test_ipcmem.cu
trt-llm-allreduce/include/: cuda_allreduce.h  cuda_ipc_memory.h
trt-llm-allreduce/src/: cuda_ipc_memory.cpp
trt-llm-allreduce/tests/: test_cuda_allreduce.cpp
